# daemon-communication

./: .gitignore  CMakeLists.txt  README.md
inc/: DaemonComm.h
src/: DaemonComm.cpp
